--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "shortid": "^2.2.16",
     "web-vitals": "^1.1.2"
   },
@@ -45,7 +47,8 @@
     "gh-pages": "^3.2.3",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "redux-devtools-extension": "^2.13.9"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
