--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://oleksandr-suslov.github.io/goit-react-hw-04-hooks-phonebook",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
