--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
-    "redux-persist": "^6.0.0",
     "shortid": "^2.2.16",
     "web-vitals": "^1.1.2"
   },
@@ -24,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "server": "json-server --watch db.json"
   },
   "eslintConfig": {
     "extends": [
