--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
-  "name": "goit-react-hw-07-phonebook",
+  "name": "goit-react-hw-08-phonebook",
   "version": "0.1.0",
-  "homepage": "https://oleksandr-suslov.github.io/goit-react-hw-07-phonebook",
+  "homepage": "https://oleksandr-suslov.github.io/goit-react-hw-08-phonebook",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.0.4",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
+    "modern-normalize": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.5",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
+    "reduxjs-toolkit-persist": "^7.0.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
